--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ html {
     box-sizing: border-box;
 }
   
+svg {
+    color: var(--title-text-color);
+}
 .body {
     background-color: var(--primery-bg-color);
     font-family: Roboto, sans-serif;
